--- a/index.html
+++ b/index.html
@@ -1,1 +1,191 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Doddi Chakradhar</title>
+  <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
+  <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Fira+Sans|Roboto:300,400|Questrial|Satisfy">
+  <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/animate.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60" onload="myFunction()">
+  <div class="header">
+    <div class="bg-color">
+      <header id="main-header">
+        <nav class="navbar navbar-default navbar-fixed-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#anamikaMenu">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="https://akhilkamalapuram2022.github.io/Akhil/">Akhil</a>
+            </div>
+            <div class="collapse navbar-collapse" id="anamikaMenu">
+              <ul class="nav navbar-nav navbar-right navbar-border">
+                <li class="active"><a href="#main-header">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
+				<li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact </a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
+      <div class="wrapper">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 wow fadeIn delay-05s">
+              <div class="banner-text">
+                <h2>Hi, I am <span>Chakradhar</span> Doddi,</h2>
+                <p>Senior Devops Engineer</p>
+              </div>
+              <div class="overlay-detail text-center">
+                <a href="#about"><i class="fa fa-angle-down"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <section id="about" class="section-padding wow fadeIn delay-05s">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 text-right">
+          <h2 class="title-text">
+            Meet<br><span class="deco">Akhil</span> Kamalapuram
+          </h2>
+        </div>
+        <div class="col-md-6 text-left">
+          <div class="about-text">
+            <p> Having 4+ years of experience in the IT industry that experience is in Microsoft Azure cloud computing on IAAS, and having good knowledge of PAAS, SAAS , Microsoft windows administration. 
+              As a Support engineer I am responsible for providing technical support on various Azure Services (IAAS) to enterprise customers of Microsoft.
+ </p>
+            <p>&nbsp;</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="experience" class="section-padding wow fadeInUp delay-05s">
+	<div class="container">
+		<div class="about-exp1">
+		<div class="col-md-12">
+          <h2 class="title text-center exp-title">Let's <span class="deco">See</span> My Experience</h2>
+        </div>
+			<div id="idExp">
+        <div class="txtNew">
+          <p class="font_7"><span style="letter-spacing:0.05em;">Apr 2022 - Till Now</span></p>
+          <h5 class="font_5">Eka Care Bangalore </h5>
+          <p class="font_8" style="line-height:1.9em;">
+            <span><span style="font-weight:bold;">SENIOR CLLOUD ENGINEER</span></span>
+          </p>
+          <p class="font_8 set_margin" style="line-height:1.9em;">Worked as a Senior Cloud Engineer in Eka care,Banglore, India.</p>
+          <p class="font_8 set_margin">Involved the Design and implemention of application into Cloud and Hands-on experience with Devops tools and methodologies. 
+            In-Depth knowledge of distributed systems, netoworking, storages and security </p>
+        </div>
+			<div class="txtNew" style="text-align :right;">
+				<p class="font_7"><span style="letter-spacing:0.05em;">FEB 2022 to MAR 2023 </span></p>
+				<h5 class="font_5">INFOCOMM IT SERVICES PVT LTD </h5>
+				<p class="font_8" style="line-height:1.9em;">
+				<span><span style="font-weight:bold;">SENIOR INFRA ENGINEER </span></span></p>
+				<p class="font_8 set_width" style="line-height:1.9em;">Worked as a SENIOR INFRA ENGINEER in INFOCOMM IT SERVICES PVT LTD ,Bangalore, India.</p>
+				<p class="font_8 set_width"> Provision of Virtual machines based on user requirements and managing respecting the business needs, 
+           Disk attachment and remove for windows and Linux VMs,
+           VM agent Installations and start and stop activities based on business needs AND 
+           Monitoring the vms and updating to respective owners. </p>
+        </div>
+			</div>
+		</div>
+    </div>
+	  </section>
+	 <section id="skills" class="section-padding wow fadeInUp">
+    <div class="container">
+      <div class="row">
+        <h2 class="title text-center">Programming Skills<span class="deco"> And</span> Projects</h2>
+        <div class="test-sec">
+          <div class="col-sm-4">
+            <blockquote>
+              <p>SAP ABAP on HANA<br>VM JSON , AZURE SQL DB and SQL SERVER and KUBERNETS<br>Odata<br>microsoft Azure<br></p>
+            </blockquote>
+            <div class="carousel-info">
+              <div class="pull-left"> <span class="testimonials-name">Programming</span></div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <blockquote>
+              <p>AZURE<br>MICROSOFT AZURE</p>
+            </blockquote>
+            <div class="carousel-info">
+              <div class="pull-left"> <span class="testimonials-name">Tools and Platforms</span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="contact" class="section-padding wow fadeIn delay-05s">
+    <div class="container">
+          <div class="contact-sec text-center">
+            <h2>Want To <span class="deco">Hire</span> Me?</h2>
+          </div>
+		  <div id="comp-iqq9o53w" data-align="center" data-disabled="false" data-margin="0" data-should-use-flex="true" class="text-center b1" data-state="desktop shouldUseFlex center" data-prev-text="DOWNLOAD RESUME" data-prev-min-width="144" data-prev-width="220">
+		  <a href="mailto:doddi.chakradhar5016@gmail.com" target="_blank" data-type="document" role="button" class="resumeLink">
+		  <span id="comp-iqq9o53wlabel" class="b1label" style="">SAY HI!</span>
+		  </a>
+		  <br><br>
+            <div class="dash animated fadeIn"></div>
+            <br>
+		  </div>
+		  <div id="comp-iqq9o53w" data-align="center" data-disabled="false" data-margin="0" data-should-use-flex="true" class="text-center b1" data-state="desktop shouldUseFlex center" data-prev-text="DOWNLOAD RESUME" data-prev-min-width="144" data-prev-width="220">
+		  <a href="../Akhil/Akhil_Resume_2023.docx" target="_blank" data-type="document" role="button" id="idLink" class="resumeLink">
+		  <span id="comp-iqq9o53wlabel" class="b1label" style="">DOWNLOAD RESUME</span>
+		  </a>
+		  </div>
+    </div>
+  </section>
+  <footer class="footer-2 text-center-xs bg--white">
+    <div class="container">
+      <!--end row-->
+      <div class="row">
+        <div class="col-md-6 text-right alignFooter">
+          <ul class="social-list">
+            <li>
+              <a href="mailto:doddi.chakradhar5016@gmail.com"><i class="fa fa-google"></i></a>
+            </li>
+            <li>
+              <a href=" https://github.com/dchakri5016 " target="_blank"><i class="fa fa-github"></i></a>  
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/chakradhar-doddi-2a07391b6/" target="_blank"><i class="fa fa-linkedin"></i></a>
+            </li>
+          
+          </ul>
+        </div>
+      </div>
+      <!--end row-->
+    </div>
+  </footer>
+
+  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery.easing.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery.bxslider.min.js"></script>
+  <script src="js/wow.js"></script>
+  <script src="js/custom.js"></script>
+
+</body>
+
+</html>
+
