--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="https://akhilkamalapuram2022.github.io/Akhil/">Akhil</a>
+              <a class="navbar-brand" href="https://github.com/dchakri5016">Chakradhar Doddi</a>
             </div>
             <div class="collapse navbar-collapse" id="anamikaMenu">
               <ul class="nav navbar-nav navbar-right navbar-border">
@@ -64,7 +64,7 @@
       <div class="row">
         <div class="col-md-6 text-right">
           <h2 class="title-text">
-            Meet<br><span class="deco">Akhil</span> Kamalapuram
+            Meet<br><span class="deco">Chakradhar</span> Doddi
           </h2>
         </div>
         <div class="col-md-6 text-left">
@@ -86,7 +86,7 @@
         </div>
 			<div id="idExp">
         <div class="txtNew">
-          <p class="font_7"><span style="letter-spacing:0.05em;">Apr 2022 - Till Now</span></p>
+          <p class="font_7"><span style="letter-spacing:0.05em;">FEB 2022 - MAR 2023 </span></p>
           <h5 class="font_5">Eka Care Bangalore </h5>
           <p class="font_8" style="line-height:1.9em;">
             <span><span style="font-weight:bold;">SENIOR CLLOUD ENGINEER</span></span>
@@ -96,7 +96,7 @@
             In-Depth knowledge of distributed systems, netoworking, storages and security </p>
         </div>
 			<div class="txtNew" style="text-align :right;">
-				<p class="font_7"><span style="letter-spacing:0.05em;">FEB 2022 to MAR 2023 </span></p>
+				<p class="font_7"><span style="letter-spacing:0.05em;">SEP 2018 to DEC 2021 </span></p>
 				<h5 class="font_5">INFOCOMM IT SERVICES PVT LTD </h5>
 				<p class="font_8" style="line-height:1.9em;">
 				<span><span style="font-weight:bold;">SENIOR INFRA ENGINEER </span></span></p>
@@ -149,7 +149,7 @@
             <br>
 		  </div>
 		  <div id="comp-iqq9o53w" data-align="center" data-disabled="false" data-margin="0" data-should-use-flex="true" class="text-center b1" data-state="desktop shouldUseFlex center" data-prev-text="DOWNLOAD RESUME" data-prev-min-width="144" data-prev-width="220">
-		  <a href="../Akhil/Akhil_Resume_2023.docx" target="_blank" data-type="document" role="button" id="idLink" class="resumeLink">
+		  <a href="Chakradhar_Doddi/chakri_4Y_Exp_2023.pdf" target="_blank" data-type="document" role="button" id="idLink" class="resumeLink">
 		  <span id="comp-iqq9o53wlabel" class="b1label" style="">DOWNLOAD RESUME</span>
 		  </a>
 		  </div>
